--- a/pom.xml
+++ b/pom.xml
@@ -47,4 +47,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+<distributionManagement>
+  <snapshotRepository>
+    <id>snapshotRepo</id>
+    <url>http://35.238.248.6:8081/nexus/content/repositories/snapshotRepo</url>
+  </snapshotRepository>
+ <repository>
+    <id>releaseRepo</id>
+    <url>http://35.238.248.6:8081/nexus/content/repositories/releaseRepo</url>
+  </repository>
+</distributionManagement>
 </project>
