--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.testdouble</groupId>
 	<artifactId>game-of-life</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>4</version>
 	<packaging>jar</packaging>
 
 	<name>game-of-life</name>
